@@ -210,13 +210,13 @@ class Ubuntu_dedicated_clean_up_box(gtk.HBox):
         self.content_pane.show_all()
         
     def __init__(self):
-        button_1 = gtk.Button(_('Auto-removable packages'))
+        button_1 = gtk.RadioButton(label = _('Auto-removable packages'))
         button_1.content = UbuntuAutoRemovableBox()
         button_1.connect('clicked', self.change_content)
-        button_2 = gtk.Button(_('Unused software configuration'))
+        button_2 = gtk.RadioButton(label = _('Unused software configuration'), group = button_1)
         button_2.content = UbuntuDeleteUnusedConfigBox()
         button_2.connect('clicked', self.change_content)
-        button_3 = gtk.Button(_('Unused Linux kernels'))
+        button_3 = gtk.RadioButton(label = _('Unused Linux kernels'), group = button_1)
         button_3.content = UbuntuCleanKernelBox()
         button_3.connect('clicked', self.change_content)
         self.buttons_pane = gtk.VBox(False, 5)
@@ -227,6 +227,7 @@ class Ubuntu_dedicated_clean_up_box(gtk.HBox):
         gtk.HBox.__init__(self, False, 5)
         self.pack_start(self.buttons_pane, False)
         self.pack_start(self.content_pane)
+        button_1.set_active(True)
         button_1.emit('clicked')
 
 class UbuntuCleanKernelBox(gtk.HBox):
