@@ -1,6 +1,7 @@
 2010-10-15 Homer Xing <homer.xing@gmail.com>
 
     * Append custom repository. Remove chosen repository.
+    * Use radio buttons in clean up pane.
 
 2010-10-10 Homer Xing <homer.xing@gmail.com>
 
